# ossflow-scrapper

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
bjj-base/: Dockerfile
bjj_service_kit/: __init__.py  app_factory.py  events.py  log_bridge.py  pyproject.toml  runner.py  schemas.py
bjj_service_kit/db/: __init__.py  alembic.ini  engine.py  models.py  session.py
bjj_service_kit/db/migrations/: env.py
bjj_service_kit/db/migrations/versions/: 0001_initial_schema.py
bjj_service_kit/tests/: conftest.py  test_compose.py  test_db.py  test_kit.py  test_log_bridge.py
chapter-splitter/: .dockerignore  Dockerfile  Dockerfile.oracle  app.py  app_oracle.py  pyproject.toml  requirements.txt
dubbing-generator/: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt  setup.py
processor-api/: Dockerfile  requirements.txt
scrapper/: __init__.py  (+4 more)
telegram-fetcher/: Dockerfile  app.py  pyproject.toml  requirements.txt
telegram-fetcher/scripts/: migrate_to_unified_db.py
telegram-fetcher/telegram_fetcher/: __init__.py  auth_store.py  browser.py  client.py  config.py  db.py  downloader.py  errors.py  models.py  naming.py  parser.py  queue.py  thumbnails.py
telegram-fetcher/telegram_fetcher/routers/: __init__.py  auth.py  channels.py  download.py  media.py
telegram-fetcher/tests/: conftest.py  test_app_lifespan.py  test_auth_store.py  test_browser.py  test_client.py  test_config.py  test_db.py  test_downloader.py  test_naming.py  test_parser.py  test_queue.py  test_routers_auth.py  test_routers_channels.py  test_routers_download.py  test_routers_media.py  test_thumbnails.py
(+183 files in other folders)
