[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-fetcher"
version = "0.1.0"
requires-python = ">=3.10"
description = "Telegram channel media fetcher with caption parsing."

[tool.setuptools.packages.find]
include = ["telegram_fetcher*"]
